--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1637,6 +1637,11 @@ select {
 .min-h-full {
   min-height: 100%;
 }
+.min-h-max {
+  min-height: -webkit-max-content;
+  min-height: -moz-max-content;
+  min-height: max-content;
+}
 .w-full {
   width: 100%;
 }
