--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1634,6 +1634,12 @@ select {
 .h-72 {
   height: 18rem;
 }
+.h-screen {
+  height: 100vh;
+}
+.h-64 {
+  height: 16rem;
+}
 .max-h-64 {
   max-height: 16rem;
 }
